# workalendar

./: .gitignore  .hgtags  .travis.yml  CHANGELOG  CHANGES.rst  CONTRIBUTING.rst  Changelog.md  LICENSE  MANIFEST.in  Makefile  README.md  README.md.bak  README.rst  VERSION  contributing.md  create-astronomical-data  pytest.ini  requirements.astronomy.txt  requirements.pip  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
calendra/: __init__.py  africa.py  america.py  asia.py  canada.py  core.py  create-astronomical-data.py  europe.py  exceptions.py  holiday.py  oceania.py  registry.py  registry_tools.py  usa.py
calendra/africa/: __init__.py  algeria.py  angola.py  benin.py  ivory_coast.py  kenya.py  madagascar.py  sao_tome.py  south_africa.py
calendra/america/: __init__.py  argentina.py  barbados.py  brazil.py  canada.py  chile.py  colombia.py  mexico.py  panama.py  paraguay.py
calendra/asia/: __init__.py  china.py  hong_kong.py  israel.py  japan.py  kazakhstan.py  malaysia.py  qatar.py  singapore.py  south_korea.py  taiwan.py
calendra/europe/: __init__.py  austria.py  belarus.py  belgium.py  bulgaria.py  cayman_islands.py  croatia.py  cyprus.py  czech_republic.py  denmark.py  estonia.py  european_central_bank.py  finland.py  france.py  georgia.py  germany.py  greece.py  hungary.py  iceland.py  ireland.py  italy.py  latvia.py  lithuania.py  luxembourg.py  malta.py  netherlands.py  norway.py  poland.py  portugal.py  romania.py  russia.py  serbia.py  slovakia.py  slovenia.py  spain.py  sweden.py  switzerland.py  turkey.py  ukraine.py  united_kingdom.py
calendra/oceania/: __init__.py  australia.py  marshall_islands.py  new_zealand.py
calendra/tests/: __init__.py  test_africa.py  test_america.py  test_asia.py  test_astronomy.py  test_brazil.py  test_canada.py  test_core.py  test_europe.py  test_germany.py  test_global_registry.py  test_ical_export.py  test_oceania.py  test_precomputed_astronomy.py  test_registry.py  test_registry_africa.py  test_registry_america.py  test_registry_asia.py  test_registry_europe.py  test_registry_oceania.py  test_registry_usa.py  test_scotland.py  test_skyfield_astronomy.py  test_spain.py  test_switzerland.py  test_turkey.py  test_usa.py
calendra/usa/: __init__.py  alabama.py  alaska.py  american_samoa.py  arizona.py  arkansas.py  california.py  colorado.py  connecticut.py  core.py  delaware.py  district_columbia.py  florida.py  georgia.py  guam.py  hawaii.py  idaho.py  illinois.py  indiana.py  iowa.py  kansas.py  kentucky.py  louisiana.py  maine.py  maryland.py  massachusetts.py  michigan.py  minnesota.py  mississippi.py  missouri.py  montana.py  nebraska.py  nevada.py  new_hampshire.py  new_jersey.py  new_mexico.py  new_york.py  north_carolina.py  north_dakota.py  ohio.py  (+15 more)
docs/: _config.yml  advanced.md  basic.md  class-options.md  conf.py  contributing.md  ical.md  index.md  index.rst  internationalization.md  iso-register.md  iso-registry.md
locales/fr/: workalendar.po
src/workalendar/: exceptions.py  registry.py  registry_tools.py
tests/: __init__.py  requirements.txt  test_africa.py  test_america.py  test_asia.py  test_astronomy.py  test_brazil.py  test_canada.py  test_core.py  test_europe.py  test_germany.py  test_global_registry.py  test_ical_export.py  test_mozambique.py  test_oceania.py  test_registry.py  test_registry_america.py  test_registry_asia.py  test_registry_europe.py  test_registry_usa.py  test_scotland.py  test_spain.py  test_switzerland.py  test_turkey.py  test_usa.py
workalendar/: __init__.py  africa.py  america.py  asia.py  astronomy.py  brazil_holidays_set.py  canada.py  core.py  europe.py  exceptions.py  oceania.py  precomputed_astronomy.py  registry.py  registry_tools.py  usa.py
(+234 files in other folders)
