[metadata]
name = calendra
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Worldwide holidays and working days helper and toolkit.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/jaraco/calendra
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.7
install_requires =
	python-dateutil
	lunardate
	pytz
	pyCalverter
	more_itertools
	skyfield
	skyfield-data
	pyluach
	importlib_metadata; python_version < "3.8"

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 2.4
	pytest-flake8
	# workaround for tholo/pytest-flake8#87
	flake8 < 5
	# disabled for easier merging
	# pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
	#	python_implementation != "PyPy"
	pytest-cov
	# disabled because there are 88 failures
	# pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
	#	python_implementation != "PyPy"
	pytest-enabler >= 1.3

	# local
	pygments
	pytest-cov
	pytest-pep8
	pandas
	jaraco.test >= 3.2.0

docs =
	# upstream
	sphinx
	jaraco.packaging >= 9
	rst.linker >= 1.9

	# local

[options.entry_points]
