[metadata]
name = workalendar
version = 16.4.0
description = Worldwide holidays and working days helper and toolkit.
author = Bruno Bord
author_email = bruno@jehaisleprintemps.net
url = https://github.com/workalendar/workalendar
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    python-dateutil
    lunardate
    backports.zoneinfo;python_version<"3.9"
    tzdata;platform_system=="Windows"
    convertdate
    pyluach
    importlib-metadata;python_version < "3.8"

[options.extras_require]
astronomy =
  skyfield
  skyfield-data
